--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ urllib3>=2.2.2 # not directly required, pinned by Snyk to avoid a vulnerability
 requests-oauthlib~=2.0.0
 zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
 pyotp~=2.9.0
+pandas==2.2.3
+tabulate==0.9.0
