--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,14 @@
 # config.yaml
 apprise:
-  summary: ON_ERROR
+  notify:
+    incomplete-activity:
+      enabled: True # True or False
+      ignore-safeguard-info: True
+    uncaught-exception:
+      enabled: True # True or False
+    login-code:
+      enabled: True # True or False
+  summary: ALWAYS # options: ALWAYS, ON_ERROR, NEVER
 retries:
   base_delay_in_seconds: 14.0625 # base_delay_in_seconds * 2^max = 14.0625 * 2^6 = 900 = 15 minutes
   max: 8
